add base, menu , reservar, reservas

--- a/proyecto/src/templates/client/home/base.html
+++ b/proyecto/src/templates/client/home/base.html
@@ -47,7 +47,7 @@
                                 <li class="nav-item"><a class="nav-link" href="#">Reservar</a></li>
                             -->
 
-                                <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %} ">dashboard</a></li>
+                                <li class="nav-item"><a class="nav-link" href="{% url 'menu' %} ">dashboard cliente</a></li>
 
                                 <li class="nav-item"><a class="nav-link link-warning" href="#">INGRESAR</a></li>
                             </li>
