--- a/proyecto/src/templates/dashboard/client/base.html
+++ b/proyecto/src/templates/dashboard/client/base.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css
@@ -16,6 +17,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'dashboard/css/base.css' %}">
+    {% block client-css %}
+    {% endblock client-css %}
+
     <title>Dashboard</title>
 </head>
 
@@ -31,30 +35,21 @@
             </a>
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2 link-dark">Menu</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">Ver reservas</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">Reservar</a></li>
+                <li><a href="{% url 'menu' %}" class="nav-link px-2 link-dark">Menu</a></li>
+                <li><a href="{% url 'reservas' %}" class="nav-link px-2 link-dark">Ver reservas</a></li>
+                <li><a href="{% url 'reservar' %}" class="nav-link px-2 link-dark">Reservar</a></li>
             </ul>
 
             <div class="col-md-3 text-end">
-                <button type="button" class="btn btn-light text-dark me-2">Mi perfil</button>
+                <a href="{% url 'perfil' %}" type="button" class="btn btn-light text-dark me-2">Mi perfil</a>
 
-                <button type="button" class="btn btn-warning">Cerrar sesión</button>
+                <a href="#" type="button" class="btn btn-warning">Cerrar sesión</a>
             </div>
         </header>
     </div>
 
-
-    <section>
-        <div class="container">
-            <div class="card">
-                <div class="card-body">
-                    <h1>testing</h1>
-                </div>
-            </div>
-        </div>
-
-    </section>
+    {% block client-contenido %}
+    {% endblock client-contenido %}
 
     <script type="text/javascript" src="{% static 'dashboard/js/script.js' %}"></script>
 </body>
