--- a/proyecto/src/templates/dashboard/client/perfil.html
+++ b/proyecto/src/templates/dashboard/client/perfil.html
@@ -1,30 +1,16 @@
-{% extends 'client/home/base.html' %}
+{% extends 'dashboard/client/base.html' %}
 {% load static %}
 
-{% block contenido %}
+{% block client-contenido %}
+
 <section>
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card text-center">
-                <div class="card-header">
-                    title
-                </div>
-                <div class="card-body">
-                    <h2> body</h2>
-                </div>
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
+                <h1>perfil</h1>
             </div>
-            <div class="col-sm-6">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-              </div>
         </div>
     </div>
-
 </section>
 
-{% endblock contenido %}
+{% endblock client-contenido %}
