--- a/proyecto/src/templates/client/home/base.html
+++ b/proyecto/src/templates/client/home/base.html
@@ -40,12 +40,13 @@
                             -->
                             <!--
                             -->
-                            <li>
+                            
                             <!--
                                 <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">Listar Reserva</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">Reservar</a></li>
                             -->
+                                <li class="nav-item"><a class="nav-link" href=" {% url 'perfil_admin' %} ">dashboard admin</a></li>
 
                                 <li class="nav-item"><a class="nav-link" href="{% url 'menu' %} ">dashboard cliente</a></li>
 
