Changes to be committed: 	renamed:    proyecto/manager/migrations/__init__.py -> proyecto/account/__init__.py 	renamed:    proyecto/users/admin.py -> proyecto/account/admin.py 	renamed:    proyecto/users/apps.py -> proyecto/account/apps.py 	new file:   proyecto/account/forms.py 	new file:   proyecto/account/migrations/0001_initial.py 	new file:   proyecto/account/migrations/0002_remove_user_intentos.py 	new file:   proyecto/account/migrations/0003_remove_user_activo.py 	renamed:    proyecto/users/__init__.py -> proyecto/account/migrations/__init__.py 	new file:   proyecto/account/models.py 	renamed:    proyecto/users/tests.py -> proyecto/account/tests.py 	new file:   proyecto/account/urls.py 	new file:   proyecto/account/views.py 	modified:   proyecto/config/settings.py 	modified:   proyecto/config/urls.py 	modified:   proyecto/manager/admin.py 	deleted:    proyecto/manager/migrations/0001_initial.py 	modified:   proyecto/manager/models.py 	modified:   proyecto/src/templates/accounts/login.html 	new file:   proyecto/src/templates/accounts/signup.html 	modified:   proyecto/src/templates/dashboard/manager/clientes_admin.html 	deleted:    proyecto/users/models.py 	deleted:    proyecto/users/urls.py 	deleted:    proyecto/users/views.py

--- a/proyecto/src/templates/accounts/signup.html
+++ b/proyecto/src/templates/accounts/signup.html
@@ -86,9 +86,9 @@
 				<label for="floatingPassword">Contraseña</label>
 			</div> {% endcomment %}
 
-			<button class="w-100 btn btn-lg btn-primary" type="submit">Ingresar</button>
+			<button class="w-100 btn btn-lg btn-warning" type="submit">Registrarse</button>
 			<div class="mt-2 mb-3" >
-				<a class="text-muted" href=" {% url 'signup' %} ">No esta registrado ? Registrate</a>
+				<a class="text-muted" href=" {% url 'login' %}  ">Ya se encuentra registrado? Ingresar</a>
 			</div>
 			<div class="mt-2 mb-3" >
 				<a class="text-muted" href=" {% url 'index' %} ">Volver al Inicio</a>
