Changes to be committed: 	modified:   proyecto/account/forms.py 	modified:   proyecto/account/migrations/0001_initial.py 	deleted:    proyecto/account/migrations/0002_remove_user_intentos.py 	deleted:    proyecto/account/migrations/0003_remove_user_activo.py 	modified:   proyecto/account/models.py 	modified:   proyecto/account/views.py 	modified:   proyecto/config/settings.py 	modified:   proyecto/requirements.txt 	modified:   proyecto/src/templates/accounts/login.html

--- a/proyecto/src/templates/accounts/login.html
+++ b/proyecto/src/templates/accounts/login.html
@@ -76,6 +76,7 @@
           <h5>{{ msg }}</h5>
         </div>
       {% endif %}
+      {{ field.errors }}
       {{ form }}
 			{% comment %} <div class="form-floating">
 				<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="nom">
