--- a/proyecto/src/templates/client/home/base.html
+++ b/proyecto/src/templates/client/home/base.html
@@ -48,7 +48,7 @@
                             -->
                                 <li class="nav-item"><a class="nav-link" href=" {% url 'perfil_admin' %} ">dashboard admin</a></li>
 
-                                <li class="nav-item"><a class="nav-link" href="{% url 'menu' %} ">dashboard cliente</a></li>
+                                <li class="nav-item"><a class="nav-link" href="{% url 'menu' %} ">Mi dashboard</a></li>
 
                                 <li class="nav-item"><a class="nav-link link-warning" href=" {% url 'login' %} ">INGRESAR</a></li>
                             </li>
