--- a/proyecto/src/templates/dashboard/client/base.html
+++ b/proyecto/src/templates/dashboard/client/base.html
@@ -43,7 +43,7 @@
             <div class="col-md-3 text-end">
                 <a href="{% url 'perfil' %}" type="button" class="btn btn-light text-dark me-2">Mi perfil</a>
 
-                <a href="#" type="button" class="btn btn-warning">Cerrar sesión</a>
+                <a href=" {% url 'logout' %} " type="button" class="btn btn-warning">Cerrar sesión</a>
             </div>
         </header>
     </div>
