--- a/proyecto/src/templates/accounts/signup.html
+++ b/proyecto/src/templates/accounts/signup.html
@@ -1,126 +1,54 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Signin Template · Bootstrap v5.2</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Log in - Brand</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
+	{% load static %}
+    {% load crispy_forms_tags %}
+</head>
 
-    {% load static %}
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
-      .b-example-divider {
-        height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
-        border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-      }
-
-      .b-example-vr {
-        flex-shrink: 0;
-        width: 1.5rem;
-        height: 100vh;
-      }
-
-      .bi {
-        vertical-align: -.125em;
-        fill: currentColor;
-      }
-
-      .nav-scroller {
-        position: relative;
-        z-index: 2;
-        height: 2.75rem;
-        overflow-y: hidden;
-      }
-
-      .nav-scroller .nav {
-        display: flex;
-        flex-wrap: nowrap;
-        padding-bottom: 1rem;
-        margin-top: -1px;
-        overflow-x: auto;
-        text-align: center;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-      }
-    </style>
-
-    
-    <!-- Custom styles for this template -->
-    <link href=" {% static 'accounts/signin.css' %}" rel="stylesheet">
-  </head>
-  <body class="text-center">
-    
-	<main class="form-signin w-100 m-auto">
-		<form action="" method="post">
-			{% csrf_token %}
-			<h1 class="h3 mb-3 fw-normal">Inicie sesión</h1>
-      {% if msg %}
-        <div class="alert alert-danger" role="alert">
-          <h5>{{ msg }}</h5>
+<body>
+    <section >
+        <div class="container py-md-5">
+            <div class="row">
+                <div class="col-md-6 text-center"><img class="img-fluid w-100" src=" {% static 'accounts/register.svg' %}">
+                  <p class="mt-5 mb-3 text-muted">Restaurante Siglo-xxi &copy; 2022–2023</p>
+                </div>
+                
+                <div class="col-md-5 col-xl-4 text-center text-md-start">
+                    <h2 class="display-6 fw-bold mb-5"><span class="underline pb-1"><strong>Registro</strong></span></h2>
+                    {% if msg %}
+                      <div class="alert alert-danger" role="alert">
+                        <h5>{{ msg }}</h5>
+                      </div>
+                    {% endif %}
+                    <form method="post">
+                      {% csrf_token %}
+						          {{ form | crispy }} 
+                        <div class="mb-3"></div>
+                        <div class="mb-5"><button class="btn btn-primary shadow" type="submit">Crear cuenta</button></div>
+                        <p class="text-muted">Ya se encuentra registrado? <a href="{% url 'login' %}">Ingresar&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-arrow-narrow-right">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                                    <line x1="15" y1="16" x2="19" y2="12"></line>
+                                    <line x1="15" y1="8" x2="19" y2="12"></line>
+                                </svg></a>&nbsp;</p>
+                        <p class="text-muted">Volver <a href="{% url 'index' %}">al Inicio&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-arrow-narrow-right">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                                    <line x1="15" y1="16" x2="19" y2="12"></line>
+                                    <line x1="15" y1="8" x2="19" y2="12"></line>
+                                </svg></a>&nbsp;</p>
+                    </form>
+                </div>
+            </div>
         </div>
-      {% endif %}
-       {{ form }} 
-      {% comment %} <div class="form-floating">
-				<input type="number" class="form-control" id="floatingInput" placeholder="sin guion, sin puntos" name="nom">
-				<label for="floatingInput">rut</label>
-			</div>
-      <div class="form-floating">
-				<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="nom">
-				<label for="floatingInput">nombre</label>
-			</div>
-      <div class="form-floating">
-				<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="nom">
-				<label for="floatingInput">apellido</label>
-			</div>
-      <div class="form-floating">
-				<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="nom">
-				<label for="floatingInput">celular</label>
-			</div>
-			<div class="form-floating">
-				<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="nom">
-				<label for="floatingInput">Correo</label>
-			</div>
-				<div class="form-floating">
-				<input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
-				<label for="floatingPassword">Contraseña</label>
-			</div>  {% endcomment %}
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 
-			<button class="w-100 btn btn-lg btn-warning" type="submit">Registrarse</button>
-			<div class="mt-2 mb-3" >
-				<a class="text-muted" href=" {% url 'login' %}  ">Ya se encuentra registrado? Ingresar</a>
-			</div>
-			<div class="mt-2 mb-3" >
-				<a class="text-muted" href=" {% url 'index' %} ">Volver al Inicio</a>
-			</div>
-
-
-			<p class="mt-5 mb-3 text-muted">Restaurante Siglo-xxi &copy; 2022–2023</p>
-		</form>
-
-    
-
-      
-
-	</main>
-
-
-    
-  </body>
 </html>
