--- a/proyecto/src/templates/client/home/base.html
+++ b/proyecto/src/templates/client/home/base.html
@@ -46,7 +46,7 @@
                                 <li class="nav-item"><a class="nav-link" href="#">Listar Reserva</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">Reservar</a></li>
                             -->
-                                <li class="nav-item"><a class="nav-link" href=" {% url 'listar_cliente' %} ">dashboard admin</a></li>
+                                <li class="nav-item"><a class="nav-link" href=" {% url 'empleados' %} ">dashboard admin</a></li>
 
                                 <li class="nav-item"><a class="nav-link" href="{% url 'menu' %} ">Mi dashboard</a></li>
 
