add button delete employee

--- a/proyecto/src/templates/dashboard/manager/empleado/index.html
+++ b/proyecto/src/templates/dashboard/manager/empleado/index.html
@@ -15,15 +15,16 @@
                     <table class="table table-light">
                         <thead>
                             <tr>
+                                
                                 <th scope="col">Rut</th>
                                 <th scope="col">Nombre</th>
                                 <th scope="col">Apellido</th>
                                 <th scope="col">Correo</th>
                                 <th scope="col">Celular</th>
                                 <th scope="col">Rol</th>
-                                <th scope="col">Hora Entrada</th>
+                                <!-- <th scope="col">Hora Entrada</th>
                                 <th scope="col">Hora Salida</th>
-                                <th scope="col">Turno</th>
+                                <th scope="col">Turno</th> -->
                                 <th scope="col">Acciones</th>
                             </tr>
                         </thead>
@@ -36,10 +37,11 @@
                                 <td>{{ e.3 }}</td>
                                 <td>{{ e.4 }}</td>
                                 <td>{{ e.5 }}</td>
-                                <td>{{ e.6 }}</td> 
+                                
+                                <!-- <td>{{ e.6 }}</td> 
                                 <td>{{ e.7 }}</td> 
-                                <td>{{ e.8 }}</td> 
-                                <td> <a name="" id="" class="btn btn-info" href="{% url 'modificar_empleado' %}" role="button">Modificar</a> | <a name="" id="" class="btn btn-danger" href="#" role="button">Eliminar</a></td>
+                                <td>{{ e.8 }}</td>  -->
+                                <td> <a name="" id="" class="btn btn-info" href="{% url 'modificar_empleado' %}" role="button">Modificar</a> | <a name="" id="" class="btn btn-danger" href="{% url 'eliminar' e.0 %}" role="button">Eliminar</a></td>
                             </tr>
                         {% endfor %}
                         </tbody>
