--- a/proyecto/src/templates/dashboard/manager/empleado/index.html
+++ b/proyecto/src/templates/dashboard/manager/empleado/index.html
@@ -41,7 +41,7 @@
                                 <!-- <td>{{ e.6 }}</td> 
                                 <td>{{ e.7 }}</td> 
                                 <td>{{ e.8 }}</td>  -->
-                                <td> <a name="" id="" class="btn btn-info" href="{% url 'modificar_empleado' %}" role="button">Modificar</a> | <a name="" id="" class="btn btn-danger" href="{% url 'eliminar' e.0 %}" role="button">Eliminar</a></td>
+                                <td> <a name="" id="" class="btn btn-info" href="{% url 'modificar'  e.0 %}" role="button">Modificar</a> | <a name="" id="" class="btn btn-danger" href="{% url 'eliminar' e.0 %}" role="button">Eliminar</a></td>
                             </tr>
                         {% endfor %}
                         </tbody>
