--- a/proyecto/src/templates/client/home/index.html
+++ b/proyecto/src/templates/client/home/index.html
@@ -21,7 +21,7 @@
                         <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
                             <div style="max-width: 350px;">
                                 <p class="my-3" style="color: rgb(255,255,255);font-family: 'Kaushan Script', serif;font-size: 25px;text-shadow: 0px 0px 5px var(--bs-orange);">El mejor sabor. . .</p>
-                                <h1 class="display-5 text-uppercase" style="color: rgb(255,255,255);font-family: Bentham, serif;letter-spacing: 0px;text-shadow: 0px 0px 6px var(--bs-orange);"><strong>RESTAURANTE SIGLO XXI</strong><br></h1><a class="btn btn-warning me-2" role="button" href="#" style="margin-top: 20px;backdrop-filter: blur(0px);">¡Reserva ahora!</a>
+                                <h1 class="display-5 text-uppercase" style="color: rgb(255,255,255);font-family: Bentham, serif;letter-spacing: 0px;text-shadow: 0px 0px 6px var(--bs-orange);"><strong>RESTAURANTE SIGLO XXI</strong><br></h1><a class="btn btn-warning me-2" role="button" href=" {% url 'reservar' %} " style="margin-top: 20px;backdrop-filter: blur(0px);">¡Reserva ahora!</a>
                             </div>
                         </div>
                     </div>
