Co-authored-by: AlexNoDraco <AlexNoDraco@users.noreply.github.com>

--- a/proyecto/src/templates/dashboard/manager/base.html
+++ b/proyecto/src/templates/dashboard/manager/base.html
@@ -25,7 +25,7 @@
         <header
             class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between  py-3 mb-4 border-bottom">
             <a  class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-                <span style="font-weight: normal !important; color: rgb(0, 0, 0);">Bienvenido {{ user.first_name | title  }}</span>
+                <span style="font-weight: normal !important; color: rgb(0, 0, 0);">Bienvenido </span>
                     <use xlink:href="#bootstrap" />
                 </span>
             </a>
