--- a/proyecto/src/templates/dashboard/manager/base.html
+++ b/proyecto/src/templates/dashboard/manager/base.html
@@ -33,6 +33,7 @@
                 <div class="btn-group">
                     <a class="btn btn-light" type="button" href=" {% url 'empleados' %} ">Empleados </a>
                     <a class="btn btn-light" type="button" href=" {% url 'mesas' %} ">Mesas </a>
+                    <a class="btn btn-light" type="button" href=" {% url 'test' %} ">Test listado empleados </a>
 
                 </div>
                 <div class="btn-group">
