--- a/proyecto/src/templates/dashboard/manager/empleado/modificar_empleado.html
+++ b/proyecto/src/templates/dashboard/manager/empleado/modificar_empleado.html
@@ -26,7 +26,12 @@
                     </div>
                     <div class="d-flex justify-content-between btn-group" role="group">
                         <button class="btn btn-success" type="submit">Modificar</button>
-
+                        
+                        
+                        
+                            
+                        <a name="" id="" class="btn btn-info" href=" {% url 'modificar_turno' form.id_usuario.value %} " role="button">Modificar turnos</a> 
+                        
                         <a type="button" href=" {% url 'empleados' %} " class="btn btn-danger">Cancelar</a>
                     </div>
                   
